Ensure download links don't wrap, and tighten up some spacing on the new homepage. (Fixes #475)
Fix up padding on the phone, and remove the transforms from download buttons

--- a/assets/css/115-homepage.css
+++ b/assets/css/115-homepage.css
@@ -520,8 +520,12 @@ a:visited {
   width: 32px;
 }
 
-.download-button {
-  transform: translateX(-20px);
+/* Remove some list padding */
+.download-dumb > ul {
+  padding: 0;
+}
+.download-button > ul {
+  padding: 0;
 }
 
 .btn-donate,
@@ -540,6 +544,7 @@ button {
   position: relative;
   transition: font-size .2s;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .btn-donate::before,
@@ -1453,6 +1458,10 @@ footer {
     background-image: none;
   }
 
+  .nav-ln {
+    display: none;
+  }
+
   .visual {
     display: none;
   }
@@ -1462,8 +1471,22 @@ footer {
   .nav-container {
     justify-content: center;
   }
+
   .nav-links {
     display: none;
+  }
+
+  .container {
+    padding-inline: 0.25rem;
+    padding-block: 32px;
+  }
+
+  .testimonials {
+    margin-block: 0;
+  }
+
+  .cta {
+    margin-top: 32px;
   }
 
   .tagline {
@@ -1477,11 +1500,30 @@ footer {
   .btn-newsletter-icon {
     display: inline-block;
   }
+
+  .phone {
+    margin-block: -125px -350px;
+  }
 }
+
+
+@media (max-width: 512px) {
+  .container {
+    padding-block: 32px;
+  }
+
+  .tagline {
+    font-size: 3rem;
+  }
+
+  .cta-heading {
+    font-size: 3rem;
+  }
+}
+
 
 .download-other {
   text-align: center;
-  transform: translateX(20px);
   margin-top: -1rem;
 }
 
